# counting-squares-puzzle

./: LICENSE  Model.hs  Squares.hs  counting-squares-puzzle.cabal
squares/: Model.hs  Squares.hs
